# cmake_minimum_required(VERSION <specify CMake version here>)
project(untitled C)

set(CMAKE_C_STANDARD 90)

add_executable(Exercises main.c)

add_executable(new Lecture4.c)

add_executable(new2 Lecture5.c)

add_executable(new3 ArrayClassExample.c)

add_executable(new4 BreakExample.c)

add_executable(new5 Lecture6.c)